# libpafe

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  config_cmake.h.in  configure  configure.in
debian/: Makefile.am  Makefile.in  changelog  control  copyright  libpafe.substvars  libpafe.udev  rules  watch
spec/: libpafe.spec
src/: Makefile.am  Makefile.in  felica_command.c  felica_command.h  libpafe.h  pasori_command.c  pasori_command.h
srpms/: libpafe-0.0.7-0.fc15.src.rpm
tests/: Makefile.am  Makefile.in  felica_dump.c  pasori_test.c
