bin_PROGRAMS = felica_dump pasori_test

felica_dump_SOURCES = felica_dump.c
felica_dump_LDADD = $(LIBUSB_LIBS) ../src/libpafe.la
felica_dump_CFLAGS = $(LIBUSB_CFLAGS) -I../src -I../

pasori_test_SOURCES = pasori_test.c
pasori_test_LDADD = $(LIBUSB_LIBS) ../src/libpafe.la
pasori_test_CFLAGS = $(LIBUSB_CFLAGS) -I../src -I../
